Move check for AWS SDK C++ to top level CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,40 @@ target_compile_definitions(aws-encryption-sdk-test PUBLIC AWS_ENCRYPTION_SDK_FOR
 
 include(CodeCoverageTargets)
 
-add_subdirectory(aws-encryption-sdk-cpp)
+if (SKIP_KMS_KEYRING_BUILD)
+    message(STATUS "Skipping C++ build of KMS keyring")
+else()
+    # By default we will try to build KMS Keyring only if we find AwsSdk
+    if (FORCE_KMS_KEYRING_BUILD)
+        message(STATUS "KMS Keyring is required")
+        set(KMS_REQUIRED "REQUIRED")
+    endif()
+
+    # for KMS Keyring
+    find_package(AWSSDK QUIET COMPONENTS core kms)
+    if (AWSSDK_FOUND)
+        option(BUILD_AWS_ENC_SDK_CPP "Build AWS ENC SDK C++ components" ON)
+        include_directories(${AWSSDK_INCLUDE_DIR})
+        link_directories(${AWSSDK_LIB_DIR})
+        message(STATUS "AWSSDK having components core, kms found.")
+    else()
+        # This fallback logic is needed on Windows
+        find_package(aws-cpp-sdk-core ${KMS_REQUIRED})
+        find_package(aws-cpp-sdk-kms ${KMS_REQUIRED})
+        if (aws-cpp-sdk-core_FOUND AND aws-cpp-sdk-kms_FOUND)
+            option(BUILD_AWS_ENC_SDK_CPP "Build AWS ENC SDK C++ components" ON)
+            message(STATUS "aws-cpp-sdk-core and aws-cpp-sdk-kms found.")
+        else()
+            message(WARNING "AWSSDK having components core and kms not found. KMS Keyring will not be built.")
+            option(BUILD_AWS_ENC_SDK_CPP "Build AWS ENC SDK C++ components" OFF)
+        endif()
+    endif()
+
+    if (BUILD_AWS_ENC_SDK_CPP)
+        add_subdirectory(aws-encryption-sdk-cpp)
+    endif()
+endif()
+
 add_subdirectory(tests)
 
 # Installation logic
