Get rid of FORCE and SKIP KMS keyring options
Just use single BUILD_AWS_ENC_SDK_CPP option

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,9 +21,7 @@ foreach (source ${example_c_sources})
     set_target_properties(${EXAMPLE_NAME} PROPERTIES C_STANDARD 99)
 endforeach ()
 
-if (SKIP_KMS_KEYRING_BUILD OR NOT BUILD_AWS_ENC_SDK_CPP)
-    message(STATUS "Skipping KMS Keyring build, so skipping C++ examples also")
-else()
+if (BUILD_AWS_ENC_SDK_CPP)
     message(STATUS "Building C++ examples")
     file(GLOB example_cpp_sources FOLLOW_SYMLINKS *.cpp)
     foreach (source ${example_cpp_sources})
@@ -32,5 +30,6 @@ else()
         target_link_libraries(${EXAMPLE_NAME} PRIVATE AWS::aws-c-common aws-cpp-sdk-kms aws-cpp-sdk-core aws-encryption-sdk aws-encryption-sdk-cpp)
         set_target_properties(${EXAMPLE_NAME} PROPERTIES CXX_STANDARD 11 C_STANDARD 99)
     endforeach ()
+else()
+    message(STATUS "Build of C++ components was skipped, so skipping C++ examples also")
 endif()
-
