Install libraries in lib64 on Amazon Linux/Redhat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,19 @@
 cmake_minimum_required (VERSION 3.9)
 project (aws-encryption-sdk)
 
+if (UNIX AND NOT APPLE)
+    include(GNUInstallDirs)
+elseif(NOT DEFINED CMAKE_INSTALL_LIBDIR)
+    set(CMAKE_INSTALL_LIBDIR "lib")
+endif()
+
 include(CTest)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-include(AwsCFlags)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake")
+
+include(AwsCryptosdkCFlags)
+include(AwsSharedLibSetup)
 include(InstallLogic)
 include(TestLibraryPath)
 
@@ -125,7 +134,7 @@ endif()
 
 add_library(${PROJECT_NAME} ${LIBTYPE} ${CORE_HEADERS} ${CORE_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C C_STANDARD 99)
-aws_set_common_properties(${PROJECT_NAME})
+aws_cryptosdk_set_common_properties(${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -142,7 +151,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC AWS::aws-c-common)
 # We'll use the shared lib for integration tests.
 add_library(aws-encryption-sdk-test EXCLUDE_FROM_ALL STATIC ${CORE_HEADERS} ${CORE_SRC})
 set_target_properties(aws-encryption-sdk-test PROPERTIES LINKER_LANGUAGE C C_STANDARD 99)
-aws_set_common_properties(aws-encryption-sdk-test)
+aws_cryptosdk_set_common_properties(aws-encryption-sdk-test)
 
 target_include_directories(aws-encryption-sdk-test PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -157,6 +166,13 @@ target_compile_definitions(aws-encryption-sdk-test PRIVATE AWS_CRYPTOSDK_TEST_ST
 target_compile_definitions(aws-encryption-sdk-test PUBLIC AWS_ENCRYPTION_SDK_FORCE_STATIC)
 
 include(CodeCoverageTargets)
+
+# Installation logic
+aws_install_target(
+    TARGET ${CMAKE_PROJECT_NAME}
+    HEADERS ${CORE_HEADERS}
+    HEADER_ROOTS ${GENERATED_INCLUDE} ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
 
 # BUILD_AWS_ENC_SDK_CPP defined as ON = force build of C++ components
 # BUILD_AWS_ENC_SDK_CPP defined as OFF = skip build of C++ components
@@ -192,13 +208,6 @@ if (BUILD_AWS_ENC_SDK_CPP)
 endif()
 
 add_subdirectory(tests)
-
-# Installation logic
-aws_install_target(
-    TARGET ${CMAKE_PROJECT_NAME}
-    HEADERS ${CORE_HEADERS}
-    HEADER_ROOTS ${GENERATED_INCLUDE} ${CMAKE_CURRENT_SOURCE_DIR}/include
-)
 
 # Generate the config header at the end, after we've finished feature probing
 set(AWS_CRYPTOSDK_P_HAVE_LIBPTHREAD ${HAVE_LIBPTHREAD} CACHE INTERNAL "")
