Check both CMAKE_PREFIX_PATH and CMAKE_INSTALL_PREFIX for CMake modules from dependenices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,14 @@ endif()
 include(CTest)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+# Make sure we can pick up Cmake modules installed by dependencies
+# both when they are in the CMAKE_INSTALL_PREFIX directory
+# and in the CMAKE_PREFIX_PATH list.
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake")
+foreach(prefix ${CMAKE_PREFIX_PATH})
+    list(APPEND CMAKE_MODULE_PATH "${prefix}/${CMAKE_INSTALL_LIBDIR}/cmake")
+endforeach(prefix)
 
 # Including AwsSharedLibSetup depends on aws-c-common being installed already.
 # Putting this ahead of that include line for a more meaningful error when missing.
