--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@
 #
 
 cmake_minimum_required (VERSION 3.9)
-project (aws-encryption-sdk)
+project (aws-encryption-sdk LANGUAGES C)
 
 if (UNIX AND NOT APPLE)
     include(GNUInstallDirs)
@@ -43,8 +43,6 @@ include(InstallLogic)
 include(TestLibraryPath)
 
 include(CheckLibraryExists)
-include(CheckCXXSourceCompiles)
-include(CheckCXXCompilerFlag)
 include(CodeCoverageFlags)
 
 # TODO: Static link?
@@ -69,19 +67,6 @@ option(PERFORM_HEADER_CHECK "Performs compile-time checks that each header can b
 option(VALGRIND_TEST_SUITE "Run the test suite under valgrind")
 set(VALGRIND_OPTIONS "--suppressions=${CMAKE_CURRENT_SOURCE_DIR}/valgrind.suppressions" CACHE STRING "Additional options to pass to valgrind")
 
-if(USE_ASM)
-    CHECK_CXX_SOURCE_COMPILES("
-    int main() {
-        __asm__(\"xor %%rax, %%rax\":::);
-        return 0;
-    }"
-    USE_X86_64_ASM
-    )
-endif()
-
-CHECK_CXX_SOURCE_COMPILES("
-    int main() { return __builtin_expect(0, 0); }
-" HAVE_BUILTIN_EXPECT)
 
 file(GLOB AWS_CRYPTOSDK_HEADERS
 # Headers subject to API/ABI stability guarantees
@@ -197,9 +182,9 @@ else()
         option(BUILD_AWS_ENC_SDK_CPP "Build AWS ENC SDK C++ components" ON)
     else()
         # This fallback logic is needed on Windows
-        find_package(aws-cpp-sdk-core)
-        find_package(aws-cpp-sdk-kms)
-        if (aws-cpp-sdk-core_FOUND AND aws-cpp-sdk-kms_FOUND)
+        find_package(AWS_CPP_SDK_CORE QUIET COMPONENTS core)
+        find_package(AWS_CPP_SDK_KMS QUIET COMPONENTS kms)
+        if (AWS_CPP_SDK_CORE_FOUND AND AWS_CPP_SDK_KMS_FOUND)
             message(STATUS "aws-cpp-sdk-core and aws-cpp-sdk-kms found.")
             option(BUILD_AWS_ENC_SDK_CPP "Build AWS ENC SDK C++ components" ON)
         else()
@@ -213,6 +198,23 @@ else()
 endif()
 
 if (BUILD_AWS_ENC_SDK_CPP)
+    project (aws-encryption-sdk LANGUAGES C CXX)
+    include(CheckCXXSourceCompiles)
+    include(CheckCXXCompilerFlag)
+
+    if(USE_ASM)
+        CHECK_CXX_SOURCE_COMPILES("
+        int main() {
+                __asm__(\"xor %%rax, %%rax\":::);
+                return 0;
+        }"
+        USE_X86_64_ASM
+        )
+    endif()
+
+    CHECK_CXX_SOURCE_COMPILES("
+        int main() { return __builtin_expect(0, 0); }
+        " HAVE_BUILTIN_EXPECT)
     add_subdirectory(aws-encryption-sdk-cpp)
 endif()
 
