Set version number in CMakeLists.txt
Version number gets sent to C code through preprocessor symbols
and to doxygen through environmental variables.

Also cleaned up printing of doxygen documentation to show only
major.minor at top of page but major.minor.patch in a note on
the main page.

Also did a bit more cleaning up of doxygen docs.

Users don't have access to version numbers now, because we are
basing them on CMake variables at our compile time, rather than
hard coding them in the header. What I think will make more sense
is to templatize the version.h file to actually paste those
numbers in there based on the values CMake is holding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,13 @@ include(FindOpenSSL)
 
 set(PROJECT_NAME aws-encryption-sdk)
 
+set(MAJOR 0)
+set(MINOR 2)
+set(PATCH 0)
+add_compile_definitions(AWS_CRYPTOSDK_VERSION_MAJOR=${MAJOR}
+                        AWS_CRYPTOSDK_VERSION_MINOR=${MINOR}
+                        AWS_CRYPTOSDK_VERSION_PATCH=${PATCH})
+
 # Compiler feature tests and feature flags
 set(USE_ASM TRUE
     CACHE BOOL "Enable use of inline assembler, if supported by the compiler and platform")
@@ -226,7 +233,7 @@ if (BUILD_DOC)
         set(DOXYGEN_CONFIG_FILE_GENERATED ${CMAKE_CURRENT_BINARY_DIR}/doxygen/doxygen.config)
         configure_file(${DOXYGEN_CONFIG_FILE_IN} ${DOXYGEN_CONFIG_FILE_GENERATED} @ONLY)
         add_custom_target(doc_doxygen ALL
-                COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIG_FILE_GENERATED}
+                COMMAND ${CMAKE_COMMAND} -E env MAJOR=${MAJOR} MINOR=${MINOR} PATCH=${PATCH} ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONFIG_FILE_GENERATED}
                 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
                 COMMENT "Generating Doxygen documentation"
                 VERBATIM)
