--- a/include/aws/cryptosdk/version.h.in
+++ b/include/aws/cryptosdk/version.h.in
@@ -16,8 +16,6 @@
 #ifndef AWS_CRYPTOSDK_VERSION_H
 #define AWS_CRYPTOSDK_VERSION_H
 
-#include <aws/cryptosdk/private/config.h>
-
 /*! \mainpage The AWS Encryption SDK for C
  *
  * The AWS Encryption SDK for C is a client-side encryption library designed to make it easy for
@@ -26,13 +24,10 @@
  * the AWS Encryption SDKs in all languages, see the
  * <a href="https://docs.aws.amazon.com/encryption-sdk/latest/developer-guide/introduction.html">Developer Guide</a>.
  *
- * <b>This library is currently in public preview.</b>
- * Feel free to check out the code and give it a spin, but be aware that the APIs are still in flux.
- * We'd love to hear your feedback on the APIs before they're fully nailed down.
- *
  * Source code and installation instructions are available in
  * <a href="https://github.com/awslabs/aws-encryption-sdk-c">the GitHub repository</a>.
  *
+ * This API documentation was generated from the v@MAJOR@.@MINOR@.@PATCH@ source code.
  *
  * <b>License</b>
  *
@@ -44,19 +39,10 @@
  *
  * This section defines version macros that can be used to query the current version of the Encryption SDK.
  * For prerelease builds, the version constants will generally contain the anticipated version of the upcoming
- * release; if a git working copy is detected at build time, we will include that revision in the version
- * strings, but not in the numeric version constants.
+ * release.
  *
  * @{
  */
-
-#ifndef AWS_CRYPTOSDK_PRIVATE_GITVERSION
-#    define AWS_CRYPTOSDK_PRIVATE_GITVERSION ""
-#endif
-
-#define AWS_CRYPTOSDK_VERSION_MAJOR 0
-#define AWS_CRYPTOSDK_VERSION_MINOR 2
-#define AWS_CRYPTOSDK_VERSION_PATCH 0
 
 #ifndef AWS_CRYPTOSDK_DOXYGEN  // undocumented private helpers
 #    define AWS_CRYPTOSDK_PRIVATE_QUOTEARG(a) #    a
@@ -64,17 +50,27 @@
 #endif
 
 /**
+ * The major version number. See VERSIONING.rst for details on versioning policy.
+ */
+#define AWS_CRYPTOSDK_VERSION_MAJOR @MAJOR@
+
+/**
+ * The minor version number. See VERSIONING.rst for details on versioning policy.
+ */
+#define AWS_CRYPTOSDK_VERSION_MINOR @MINOR@
+
+/**
+ * The patch version number. See VERSIONING.rst for details on versioning policy.
+ */
+#define AWS_CRYPTOSDK_VERSION_PATCH @PATCH@
+
+/**
  * A string constant containing version information in a human-readable form.
  */
 #define AWS_CRYPTOSDK_VERSION_STR                                                                             \
     AWS_CRYPTOSDK_PRIVATE_EXPANDQUOTE(AWS_CRYPTOSDK_VERSION_MAJOR)                                            \
     "." AWS_CRYPTOSDK_PRIVATE_EXPANDQUOTE(AWS_CRYPTOSDK_VERSION_MINOR) "." AWS_CRYPTOSDK_PRIVATE_EXPANDQUOTE( \
-        AWS_CRYPTOSDK_VERSION_PATCH) AWS_CRYPTOSDK_PRIVATE_GITVERSION
-
-/**
- * A string constant containing version information in a form suitable for a user-agent string.
- */
-#define AWS_CRYPTOSDK_VERSION_UA "aws-encryption-sdk-c/" AWS_CRYPTOSDK_VERSION_STR
+        AWS_CRYPTOSDK_VERSION_PATCH)
 
 /** @} */  // doxygen group versioning
 
